overflow imperfection corrected

--- a/src/personal-scss/personal.scss
+++ b/src/personal-scss/personal.scss
@@ -9,7 +9,7 @@ body{
 #home{
     background: linear-gradient(black 0%, #1f1e1e 7%,#1f1e1e 93%, black  ) !important ;
     min-height: 100vh;
-    overflow-x: hidden !important;
+    // overflow-x: hidden !important;
 }
 
 @media screen and (min-width :992px) {
@@ -89,17 +89,17 @@ right: 180px !important;
         font-size: 2rem !important;
       }
     
-    .CarImg{
-        height: 500px !important;
-    }
+    // .CarImg{
+    //     height: 500px !important;
+    // }
     .rowWidth{
-        // width: 100% !important;
+        width: 100% !important;
         overflow-x: scroll;
         flex-wrap: nowrap;
     }
-    #row{
-        width: 160% !important;
-    }
+    // #row{
+        // width: 120% !important;
+    // }
     .xm-0{
         margin: 0px 30px !important;
     }
@@ -108,14 +108,14 @@ right: 180px !important;
     // }
 }
 @media screen and (min-width:992px) {
-    .CarImg{
-        height: 450px !important;
-    }
+    // .CarImg{
+    //     height: 450px !important;
+    // }
 }
 @media screen and (min-width:1500px) {
-    .CarImg{
-        height: 600px !important;
-    }
+    // .CarImg{
+    //     height: 600px !important;
+    // }
 }
 #row{
 
